<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, TableLayout!</string>
    <string name="app_name">MyTableLayout</string>
	<string name="button1">Button1</string>
    <string name="button2">Button2</string>
    <string name="button3">Button3</string>
    <string name="button4">Button4</string>
	<string name="button5">Button5</string>
    <string name="button6">Button6</string>
    <string name="button7">Button7</string>
    <string name="button8">Button8</string>
</resources>
