<TableLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/tableLayout1" 
	android:layout_width="match_parent" 
	android:layout_height="match_parent" 
	android:layout_gravity="center"
	android:shrinkColumns="0,1">
	<TableRow 
	    android:id="@+id/tableRow1" 
		android:layout_width="wrap_content" 
		android:layout_height="wrap_content">
		<Button android:text="@string/button1" android:id="@+id/button1" 
			android:layout_width="wrap_content" android:layout_height="wrap_content">
		</Button>
		<Button android:text="@string/button2" android:id="@+id/button2" 
			android:layout_width="wrap_content" android:layout_height="wrap_content">
		</Button>
		<Button android:text="@string/button3" android:id="@+id/button3" 
			android:layout_width="wrap_content" android:layout_height="wrap_content">
		</Button>
		<Button android:text="@string/button4" android:id="@+id/button4" 
			android:layout_width="wrap_content" android:layout_height="wrap_content">
		</Button>
	</TableRow>
	<TableRow 
	    android:id="@+id/tableRow2" 
		android:layout_width="wrap_content" 
		android:layout_height="wrap_content">
		<Button android:text="@string/button5" android:id="@+id/button5" 
			android:layout_width="wrap_content" android:layout_height="wrap_content">
		</Button>
		<Button android:text="@string/button6" android:id="@+id/button6" 
			android:layout_width="wrap_content" android:layout_height="wrap_content">
		</Button>
		<Button android:text="@string/button7" android:id="@+id/button7" 
			android:layout_width="wrap_content" android:layout_height="wrap_content">
		</Button>
		<Button android:text="@string/button8" android:id="@+id/button8" 
			android:layout_width="wrap_content" android:layout_height="wrap_content">
		</Button>
	</TableRow>
</TableLayout>
